@@ -321,3 +321,4 @@ Revision	Version Updated		Log Message
 298		C++			Updated tech conversion
 299		C++			All cultures from EU3 cultural unions now accepted.
 300		C++			Further tech updates.
+301		C++			Tweaked pop conversion of bureaucrats, aristocrats, and capitalists.
